@@ -8,6 +8,7 @@
 # app hot fix after changing database for webapp purposes
 # Presenting state hot fix
 # (webapp) able to add sessions again
+# (webapp) can add presentations to sessions again.
 
 # 0.0.46
 # Deleted old mac app files (client/)
